Fix horizontal scroll on about page and text width

--- a/client/sass/blocks/components/_typography.scss
+++ b/client/sass/blocks/components/_typography.scss
@@ -20,6 +20,10 @@
   font-size: clamp($fs-2, 1.5vw, 18px);
 
   @media screen and (min-width: $md-screen) {
+    width: 80%;
+  }
+
+  @media screen and (min-width: 900px) {
     width: 95%;
   }
 }
