--- a/client/sass/blocks/layouts/_about.scss
+++ b/client/sass/blocks/layouts/_about.scss
@@ -34,6 +34,8 @@
   min-height: 700px;
   margin: 0 auto;
   width: 100%;
+
+
 }
 
 .about-section {
@@ -123,8 +125,11 @@
     transform: translateY(-10px); /* Initial offset */
     transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s 0.3s; /* Delay hiding */
     padding: 8px 16px;
-    width: 500px;
     line-height: 1.6;
+
+    @media screen and (min-width: $lg-screen) {
+      width: 450px;
+    }
   }
 }
 
